--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,4 @@ PrettyTable<0.8,>=0.7.1 # BSD
 urllib3>=1.21.1 # MIT
 debtcollector>=1.2.0 # Apache-2.0
 unittest2>=1.1.0 # BSD
+Babel>=2.4.0 # Apache-2.0
