--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,4 @@ urllib3>=1.21.1 # MIT
 debtcollector>=1.2.0 # Apache-2.0
 unittest2>=1.1.0 # BSD
 Babel>=2.4.0 # Apache-2.0
+ConfigParser>=3.7.4 # MIT
